Make sure video titles dont wrap on small screens

--- a/assets/styles/vjs.scss
+++ b/assets/styles/vjs.scss
@@ -117,6 +117,7 @@
       font-size: 1.1rem;
       line-height: 1;
       margin-bottom: -.1rem;
+      white-space: nowrap;
     }
 
     > small {
